--- a/package.json
+++ b/package.json
@@ -9,17 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.1.9",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@uiw/codemirror-theme-vscode": "^4.21.7",
+    "@uiw/react-codemirror": "^4.21.7",
+    "assert": "^2.0.0",
     "autoprefixer": "10.4.14",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
+    "mongoose": "^7.3.1",
     "next": "13.4.8",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "react-split": "^2.0.14",
+    "react-toastify": "^9.1.3",
+    "react-youtube": "^10.1.0",
+    "recoil": "^0.7.7",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2"
   }
 }
