--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcryptjs": "^2.4.3",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
+    "moment": "^2.29.4",
     "mongoose": "^7.3.1",
     "next": "13.4.8",
     "next-auth": "^4.22.1",
